# jabuti-crud

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 20260325_0001_create_users_table.py
app/: dependencies.py  main.py
app/api/routes/: health.py  users.py
app/core/: config.py  logging.py
app/db/: migrations.py  models.py  session.py  types.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/scripts/: seed.py
app/services/: cache_service.py  user_service.py
tests/: conftest.py  test_health.py  test_users.py
